// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildGradientSpec — regression snapshots > aurora @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": -54.91128320842981,
        "cy": -1032.6408085227013,
        "kind": "radial",
        "r": 5088.257706388831,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 294.4006261356175,
        "cy": 4306.660725772381,
        "kind": "radial",
        "r": 4181.90049290657,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 410.8041831560433,
        "cy": -1574.5251012593505,
        "kind": "radial",
        "r": 5047.694767862558,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 601.2927844427526,
        "cy": 4189.22226421535,
        "kind": "radial",
        "r": 5644.914430975914,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 675.0134854093194,
        "cy": -1454.6714913100004,
        "kind": "radial",
        "r": 5359.55325499177,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 939.5183363445104,
        "cy": 4670.113112330437,
        "kind": "radial",
        "r": 5436.883395388722,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1208.946330039203,
        "cy": -1191.3287284970284,
        "kind": "radial",
        "r": 4647.817342579365,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1361.5384645186364,
        "cy": 4532.228520587087,
        "kind": "radial",
        "r": 4846.110216751695,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 3360,
        "kind": "radial",
        "r": 1152,
        "stops": [
          {
            "color": "#ffd86e55",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > aurora @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 26.20609249770641,
        "cy": -1390.35893663764,
        "kind": "radial",
        "r": 5523.945269584656,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 223.99506354108453,
        "cy": 4327.821342796087,
        "kind": "radial",
        "r": 5002.548067495227,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 301.2206961303949,
        "cy": -1559.7548677772284,
        "kind": "radial",
        "r": 5544.759437292814,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 532.824580682069,
        "cy": 4399.926784858108,
        "kind": "radial",
        "r": 5571.294133588672,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 783.6951768435538,
        "cy": -1254.7214528918266,
        "kind": "radial",
        "r": 4475.606140717864,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 900.1890832230448,
        "cy": 4819.147537201643,
        "kind": "radial",
        "r": 5136.993437483907,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 951.3960931487381,
        "cy": -1411.9506467878819,
        "kind": "radial",
        "r": 5499.739881455898,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1143.673441824317,
        "cy": 4728.631030917168,
        "kind": "radial",
        "r": 4210.460729002953,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 3360,
        "kind": "radial",
        "r": 1152,
        "stops": [
          {
            "color": "#ffd86e55",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > aurora @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": -19.284128594398496,
        "cy": -1000.5309674888849,
        "kind": "radial",
        "r": 5273.610767573118,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 176.34482109323145,
        "cy": 4271.132127046585,
        "kind": "radial",
        "r": 5481.77309691906,
        "stops": [
          {
            "color": "#2b1055aa",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 459.31209053546195,
        "cy": -1712.635344788432,
        "kind": "radial",
        "r": 4249.545929804444,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 457.249591691047,
        "cy": 5032.860063388944,
        "kind": "radial",
        "r": 5094.269382432103,
        "stops": [
          {
            "color": "#7597deaa",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 718.9408195652068,
        "cy": -1621.790832057595,
        "kind": "radial",
        "r": 4835.377332791686,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 784.3162277162075,
        "cy": 4285.082298144698,
        "kind": "radial",
        "r": 4279.7315197438,
        "stops": [
          {
            "color": "#ff6e7faa",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1058.3785278372468,
        "cy": -1446.3235433399677,
        "kind": "radial",
        "r": 5722.477246299386,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1145.3100819513202,
        "cy": 4436.717763021588,
        "kind": "radial",
        "r": 4559.158340319991,
        "stops": [
          {
            "color": "#ffd86eaa",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 3360,
        "kind": "radial",
        "r": 1152,
        "stops": [
          {
            "color": "#ffd86e55",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 108.9612127840519,
        "cy": -203.3751229941845,
        "kind": "radial",
        "r": 1425.715967874974,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 219.99108865857124,
        "cy": 957.0393560578425,
        "kind": "radial",
        "r": 1017.8552218079566,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 921.7876518890262,
        "cy": 1254.8303079853454,
        "kind": "radial",
        "r": 1407.4626455381513,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 43.83339632302523,
        "cy": 1827.0103127509356,
        "kind": "radial",
        "r": 1676.2114939391613,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 742.0072369650006,
        "cy": 1966.7166126271086,
        "kind": "radial",
        "r": 1547.7989647462964,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 765.1696684956551,
        "cy": 2813.0308753500385,
        "kind": "radial",
        "r": 1582.597527924925,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.4)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 645.53840495646,
        "cy": 97.05960184335709,
        "kind": "radial",
        "r": 1621.775371313095,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 251.7320141941309,
        "cy": 696.2780131151278,
        "kind": "radial",
        "r": 1387.146630372852,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 899.6323016658425,
        "cy": 848.9655412236848,
        "kind": "radial",
        "r": 1631.1417467817664,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 359.89017728716135,
        "cy": 1573.424372896552,
        "kind": "radial",
        "r": 1643.0823601149023,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 442.08217933773994,
        "cy": 2369.2413957168656,
        "kind": "radial",
        "r": 1150.0227633230388,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 988.7213058024645,
        "cy": 2667.3669749001665,
        "kind": "radial",
        "r": 1447.647046867758,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.4)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > liquid @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 60.79645123332739,
        "cy": -71.42269849777222,
        "kind": "radial",
        "r": 1509.1248454079032,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 166.69819056987762,
        "cy": 519.7956336786349,
        "kind": "radial",
        "r": 1602.797893613577,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1128.9530171826482,
        "cy": 1434.4892242054143,
        "kind": "radial",
        "r": 1048.295668412,
        "stops": [
          {
            "color": "#ff6e7fcc",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1309.2900950834155,
        "cy": 1293.5170062631369,
        "kind": "radial",
        "r": 1428.4212220944464,
        "stops": [
          {
            "color": "#ffd86ecc",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 992.6862480863929,
        "cy": 2129.410442834099,
        "kind": "radial",
        "r": 1311.9197997562587,
        "stops": [
          {
            "color": "#2b1055cc",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 187.62344721704721,
        "cy": 2238.208250800769,
        "kind": "radial",
        "r": 1061.87918388471,
        "stops": [
          {
            "color": "#7597decc",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 720,
        "cy": 960,
        "kind": "radial",
        "r": 720,
        "stops": [
          {
            "color": "rgba(255,255,255,0.4)",
            "offset": 0,
          },
          {
            "color": "rgba(255,255,255,0)",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 12 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 317.78244834244254,
        "cy": 208.42720568180084,
        "kind": "radial",
        "r": 1084.4011775124818,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1511.2906977251173,
        "cy": 1057.7738171815872,
        "kind": "radial",
        "r": 798.8986552655698,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 482.22872935384515,
        "cy": 2169.683400839567,
        "kind": "radial",
        "r": 1071.623851876706,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1357.8680439457298,
        "cy": 2579.4815094769,
        "kind": "radial",
        "r": 1259.748045757413,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 42 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 443.96503277421,
        "cy": 446.90595775842667,
        "kind": "radial",
        "r": 1221.6427599191666,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1307.8968502297998,
        "cy": 1071.8808951973915,
        "kind": "radial",
        "r": 1057.4026412609965,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 311.7655273139477,
        "cy": 2159.8365785181522,
        "kind": "radial",
        "r": 1228.1992227472365,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1160.0710108593107,
        "cy": 2719.951189905405,
        "kind": "radial",
        "r": 1236.5576520804318,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;

exports[`buildGradientSpec — regression snapshots > mesh @ seed 77 1`] = `
{
  "background": "#2b1055",
  "blurPx": 241.91999999999996,
  "h": 3200,
  "layers": [
    {
      "fill": {
        "cx": 373.20246663093565,
        "cy": 187.02064499258995,
        "kind": "radial",
        "r": 1142.7873917855322,
        "stops": [
          {
            "color": "#2b1055",
            "offset": 0,
          },
          {
            "color": "#2b105500",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 1170.2405942693354,
        "cy": 1034.0880846977234,
        "kind": "radial",
        "r": 1208.3585255295038,
        "stops": [
          {
            "color": "#7597de",
            "offset": 0,
          },
          {
            "color": "#7597de00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 557.685474166274,
        "cy": 2261.7568965256214,
        "kind": "radial",
        "r": 820.2069678884001,
        "stops": [
          {
            "color": "#ff6e7f",
            "offset": 0,
          },
          {
            "color": "#ff6e7f00",
            "offset": 1,
          },
        ],
      },
    },
    {
      "fill": {
        "cx": 941.7432648852468,
        "cy": 3141.9067089259624,
        "kind": "radial",
        "r": 1086.2948554661125,
        "stops": [
          {
            "color": "#ffd86e",
            "offset": 0,
          },
          {
            "color": "#ffd86e00",
            "offset": 1,
          },
        ],
      },
    },
  ],
  "w": 1440,
}
`;
